Hopefully fixed transition mobile bug

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -183,7 +183,6 @@ input[type=number] {
 /* Navbar search stuff */
 .navbar-form.ng-hide-add.ng-hide-add-active,
 .navbar-form.ng-hide-remove.ng-hide-remove-active {
-  -webkit-transform-style: preserve-3d;
   -webkit-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
   -moz-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
   -ms-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
@@ -198,10 +197,11 @@ input[type=number] {
 
 /* View transition stuff */
 .view-animate.ng-enter, .view-animate.ng-leave {
-  -webkit-transform-style: preserve-3d;
   transition: transform 500ms ease;
   -moz-transition: transform 500ms ease;
   -webkit-transition: transform 500ms ease;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
   display:block;
   width:100%;
   position:absolute;
